02/19/2018_A7_Stying Added custom background, fontFamily, and color.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="assignment_name">ITC162_A6_AddingSeekBar</string>
+    <string name="assignment_name">ITC162_A7_Stying</string>
     <string name="app_name">TempConverterApp</string>
     <string name="fahrenheit">Fahrenheit</string>
     <string name="celsius">Celsius</string>
